# AtomECS

./: .gitignore  Cargo.toml
examples/: dipole_trap.rs  quadrupole_trap.rs  top_trap_with_collisions.rs
src/: atom.rs  collisions.rs  destructor.rs  gravity.rs  initiate.rs  integrator.rs  lib.rs  losses.rs  maths.rs  partition.rs  sim_region.rs  simulation.rs
src/atom_sources/: oven.rs
src/dipole/: force.rs  mod.rs
src/laser/: gaussian.rs  harmonic.rs  intensity.rs  intensity_gradient.rs  mod.rs  sampler.rs
src/laser_cooling/: doppler.rs  force.rs  mod.rs  photons_scattered.rs  rate.rs  sampler.rs  zeeman.rs
src/magnetic/: mod.rs  quadrupole.rs
