[package]
authors = ["Pi-sun <37469116+Pi-sun@users.noreply.github.com>", "ElliotB256 <7041164+ElliotB256@users.noreply.github.com>"]
description = "An data-oriented simulation package for cold atom experiments."
edition = "2018"
homepage = "https://github.com/TeamAtomECS/AtomECS"
keywords = ["physics", "cold-atoms", "amop", "laser-cooling", "ecs"]
license = "GPL-3.0-or-later"
name = "atomecs"
readme = "README.md"
repository = "https://github.com/TeamAtomECS/AtomECS"
version = "0.7.1"

[dependencies]
atomecs-derive = "0.1.0"
rayon = "1.5.0"
# specs={ version="0.17.0", features=["rayon"] }
assert_approx_eq = "1.1.0"
nalgebra = { version = "^0.31.0", features = ["serde-serialize"] }
csv = "1.1"
byteorder = "1.3.2"
csv = "1.1"
hashbrown = {version = "0.11.2", features = ["rayon"]}
multimap = "0.8.2"
hashbrown = { version = "^0.12.1", features = ["rayon"] }
serde_arrays = "0.1.0"
serde_json = "1.0"
serde_yaml = "0.8.9"
# specs = {git = "https://github.com/minghuaw/specs", branch = "u32max_hibitset", features = ["rayon"]}
specs = {git = "https://gitee.com/minghuaw/specs", branch = "u32max_hibitset", features = ["rayon"]}
specs-derive = "0.4.1"

[dev-dependencies]
criterion = "0.3"
gnuplot = "0.0.37"

[profile.release]
codegen-units = 16
debug = true
debug-assertions = false
incremental = false
lto = false
opt-level = 3
overflow-checks = false
panic = 'unwind'
rpath = false
